tests/parsing/valid/element_definition_in_element_definition/bus.fbd
bus my_bus(m)
	masters = m

	mask my_mask(w)
		width = w
