tests/parsing/invalid/argument_assigned_twice/bus.fbd
bus my_bus(m=2)
	masters = m

main my_bus(m=1, m=2)
